Fix test by refactoring it to use mocks, so, we dont need transactional tests